refactor: 메모리 사용 이점과 null 요소도 허용하지 않는 이점이 있는 List.of 로 변경하고 "," 상수화